--- a/task.css
+++ b/task.css
@@ -28,3 +28,42 @@
     border-color: #555;
     outline: none;
 }
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.content{
+    padding: 6rem;
+    border: 1px solid #555;
+    background-color: #F8D800;
+    border-radius: 12px;
+    box-shadow: 1px 2px 6px 1px rgba(0, 0, 0, 0.326);
+}
+
+.amount-input{
+    border-radius:3px;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.326);
+    padding: 3px;
+}
+
+.amount-input:active{
+    border-color: #555;
+    outline: none;
+}
+
+.convert-button{
+    width: 100%;
+    background-color: #007bff;
+    color: white;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.326);
+    padding: 5px;
+    border-radius: 5px;
+}
