--- a/task.css
+++ b/task.css
@@ -52,6 +52,7 @@
     border-radius:3px;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.326);
     padding: 3px;
+    width: 96%;
 }
 
 .amount-input:active{
@@ -66,4 +67,24 @@
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.326);
     padding: 5px;
     border-radius: 5px;
+}
+
+.dropdown-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.current-amount{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.heading{
+    text-align: center;
+}
+
+.result{
+    text-align: center;
 }
