--- a/task.css
+++ b/task.css
@@ -28,6 +28,7 @@ body{
     border-radius:3px;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.326);
     padding: 3px;
+    width: 95%;
 }
 
 .amount-input:active{
@@ -39,27 +40,53 @@ body{
     width: 100%;
     background-color: #007bff;
     color: white;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.326);
-    padding: 5px;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.247);
+    padding: 6px;
     border-radius: 5px;
+    outline: none;
+}
+
+.btn-convert{
+    padding-block: 10px;
+}
+
+.amount-head{
+    margin-bottom: 15px;
 }
 
 .dropdown-container{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-block: 10px;
+}
+
+.dropdown{
+    border-radius:3px;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.326);
+    padding: 3px;
 }
 
 .current-amount{
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-block: 15px;
+    margin-top: 15px;
 }
 
 .heading{
     text-align: center;
+    filter: drop-shadow(1px 2px 4px rgba(128, 128, 128, 0.484));
 }
 
-.result{
+#result{
     text-align: center;
+    padding-block: 10px;
+}
+
+#error{
+    text-align: center;
+    padding-block: 10px;
+    display: none;
 }
