--- a/task.css
+++ b/task.css
@@ -36,7 +36,7 @@ body{
     outline: none;
 }
 
-.convert-button{
+#convert-button{
     width: 100%;
     background-color: #007bff;
     color: white;
